[tool.poetry]
name = "healthdbModels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.22"
pandas = "^1.2.0"
SQLAlchemy-Utils = "^0.36.8"
black = "^20.8b1"
isort = "^5.7.0"
docformatter = "^1.4"
alembic = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
