[tool.poetry]
name = "healthdbModels"
version = "0.1.0"
description = "Framework to construct a simple, customizable health database"
authors = ["Joseph Deferio <jdeferio.io@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.22"
pandas = "^1.2.0"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
docformatter = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
